styled top half of page

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <!-- End Navigation -->
     <header class="header">
       <h1 class="name-header">Gabrielle Tobermann </h1>
+      <img src="../Violin-black.png" alt="Vioin outline">
       <h2 class="name-header">Web Developer</h2>
     </header>
 
