--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
       and programmer was a perfect combination. Both fields are challenging,
       require constant learning, and are extremely rewarding. I am now attending
       Nashville Software School to become a full-stack software developer.</p>
+      <img src="../profile-picture.jpg" class="rounded-circle" alt="profilepicture">
       
     </div>
     <div class="fullPage" id="technologiesPage">
