--- a/src/index.html
+++ b/src/index.html
@@ -44,25 +44,26 @@
     </div>
     <div class="fullPage" id="technologiesPage">
       <!-- TODO: Start an UL of all of the tools and technologies you've started learning so far. (You'll beef this page up later). -->
-      <section>
+      <section id="technologies">
         <div>
           <p>HTML</p>
-          <i class="fab fa-html5"></i>
+          <i class="fab fa-html5 fa-5x"></i>
         </div>
         <div>
           <p>JAVASCRIPT</p>
-          <i class="fab fa-js"></i>
+          <i class="fab fa-js fa-5x"></i>
         </div>
         <div>
           <p>GIT</p>
-          <img src="../git-icon.png" alt="git icon" id="git-icon">
+          <img src="../git-icon.png" alt="git icon" class="icon">
         </div>
         <div>
           <p>GITHUB</p>
-          <i class="fab fa-github"></i>
+          <i class="fab fa-github fa-5x"></i>
         </div>
         <div>
           <p>VS CODE</p>
+          <img src="../vs-code-icon.png" alt="VS Code icon" class="icon">
         </div>
       </section>
     </div>
