--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <li><a id="navToBio">BIO</a></li>
         <li><a id="navToTechnologies">TECHNOLOGIES</a></li>
         <li><a id="navToProjects">PROJECTS</a></li>
+        <li><a id="navToContact">CONTACT</a></li>
       </ul>
     </nav>
     <!-- End Navigation -->
@@ -73,7 +74,7 @@
     <!-- Footer -->
     <footer class="page-footer">
       <!-- TODO: Fill in contact info here: Include things like email, LinkedIn, Twitter and GitHub links. -->
-      <div>
+      <div id="contactPage">
         <h2>Contact me:</h2>
         <p>Email: gabrielle.tobermann@gmail.com</p>
         <p>Github: https://github.com/Gabrielle-Tobermann</p>
