--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,14 @@
   <title>Gabrielle Tobermann</title>
 </head>
 <body>
-  <body>
     <!-- Navigation -->
     <nav>
       <!-- TODO: Insert some sort of H1-H6 with your name here -->
       <ul id="navLinks">
-        <li><a id="navToBio">BIO</a></li>
-        <li><a id="navToTechnologies">TECHNOLOGIES</a></li>
-        <li><a id="navToProjects">PROJECTS</a></li>
-        <li><a id="navToContact">CONTACT</a></li>
+        <button><a id="navToBio">BIO</a></button>
+        <button><a id="navToTechnologies">TECHNOLOGIES</a></button>
+        <button><a id="navToProjects">PROJECTS</a></button>
+        <button><a id="navToContact">CONTACT</a></button>
       </ul>
     </nav>
     <!-- End Navigation -->
@@ -80,7 +79,5 @@
         <p>Github: https://github.com/Gabrielle-Tobermann</p>
       </div>
     </footer>
-  <!-- <div id="login-form-container"></div>
-  <div id="app"></div> -->
 </body>
 </html>
