styled projects, footer

--- a/src/index.html
+++ b/src/index.html
@@ -67,14 +67,17 @@
         </div>
       </section>
     </div>
-    <div class="fullPage" id="projectsPage"></div>
+    <div class="fullPage" id="projectsPage">
+      <h2>PROJECTS</h2>
+      <div id="projects"></div>
+    </div>
     <!-- End Primary View -->
 
     <!-- Footer -->
     <footer class="page-footer">
       <!-- TODO: Fill in contact info here: Include things like email, LinkedIn, Twitter and GitHub links. -->
       <div id="contactPage">
-        <h2>Contact me:</h2>
+        <h2>CONTACT ME</h2>
         <p>Email: gabrielle.tobermann@gmail.com</p>
         <p>Github: https://github.com/Gabrielle-Tobermann</p>
       </div>
